--- a/package.json
+++ b/package.json
@@ -250,6 +250,8 @@
   "dependencies": {
     "@antv/data-set": "^0.11.8",
     "@antv/g2": "^4.1.10",
+    "antd": "^4.12.3",
+    "babel-plugin-import": "^1.13.3",
     "bizcharts": "^4.1.7",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
