--- a/package.json
+++ b/package.json
@@ -253,7 +253,9 @@
     "antd": "^4.12.3",
     "babel-plugin-import": "^1.13.3",
     "bizcharts": "^4.1.7",
+    "echarts": "^5.0.2",
     "echarts-for-react": "^3.0.0",
+    "echarts-gl": "^2.0.2",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
